package jp.mydns.kokoichi0206.quiz

object TestTags {
    const val CHOOSE_QUIZ_TYPE_PAGE_TITLE = "CHOOSE_QUIZ_TYPE_PAGE_TITLE"
    const val QUIZ_TYPE_CHOICE = "QUIZ_TYPE_CHOICE"

    const val WRONG_CORRECT_ICON = "WRONG_CORRECT_ICON"
    const val PLAY_QUIZ_TITLE = "PLAY_QUIZ_TITLE"
    const val PLAY_QUIZ_ANS = "PLAY_QUIZ_ANS"
    const val PLAY_QUIZ_ONE_CHOICE = "PLAY_QUIZ_ONE_CHOICE"
    const val PLAY_QUIZ_PROGRESS_BAR = "PLAY_QUIZ_PROGRESS_BAR"
}
