...
    <string name="clear_cache_title">キャッシュ情報を削除しますか？</string>
    <string name="clear_cache_body">一時的な情報を削除することでストレージに多少の余裕を持たせることができます。</string>
    <string name="clear_cache_ok">削除</string>
    <string name="clear_cache_cancel">キャンセル</string>

    <!--    Strings for SettingTopScreen-->
    <string name="developer_success_snack_bar_text">You are now a developer!</string>
    <string name="developer_on_the_way_snack_bar_text">You are now %d steps away from being a developer.</string>
    <string name="version_info_in_settings">バージョン情報 %s</string>
    <string name="setting_update_blog">Blog 情報を更新する</string>
    <string name="setting_quiz_record">クイズ成績</string>
    <string name="setting_clear_cache">キャッシュをクリア</string>
    <string name="setting_report_bugs">不具合の報告／意見</string>
...
    <string name="update_blog_failure_dialog_title">更新失敗</string>
    <string name="update_blog_failure_dialog_body">更新処理の通知を送ることができませんでした。必要な権限があるか管理者にお問い合わせください。</string>
    <string name="update_blog_dialog_button">OK</string>

    <!--    Strings for ReportIssueScreen-->
    <string name="report_issue_title">不具合の報告／意見</string>
    <string name="report_issue_text_placeholder">詳細内容</string>
    <string name="report_issue_submit_button">送信</string>
    <string name="report_issue_dialog_title">送信</string>
    <string name="report_issue_dialog_body">内容をご確認ください</string>
    <string name="report_issue_dialog_button_ok">送信</string>
    <string name="report_issue_dialog_button_cancel">キャンセル</string>

...
